--- a/SpellEditor.vcproj
+++ b/SpellEditor.vcproj
@@ -246,6 +246,90 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="logic"
+			>
+			<Filter
+				Name="skill"
+				>
+				<File
+					RelativePath=".\logic\skill\aura_def.h"
+					>
+				</File>
+				<File
+					RelativePath=".\logic\skill\aura_template.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\logic\skill\aura_template.h"
+					>
+				</File>
+				<File
+					RelativePath=".\logic\skill\CAura.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\logic\skill\CAura.h"
+					>
+				</File>
+				<File
+					RelativePath=".\logic\skill\CEot.h"
+					>
+				</File>
+				<File
+					RelativePath=".\logic\skill\CPeriodEffect.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\logic\skill\CPeriodEffect.h"
+					>
+				</File>
+				<File
+					RelativePath=".\logic\skill\CPrdEftList.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\logic\skill\CPrdEftList.h"
+					>
+				</File>
+				<File
+					RelativePath=".\logic\skill\eot_def.h"
+					>
+				</File>
+				<File
+					RelativePath=".\logic\skill\eot_template.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\logic\skill\eot_template.h"
+					>
+				</File>
+				<File
+					RelativePath=".\logic\skill\evtDef.h"
+					>
+				</File>
+				<File
+					RelativePath=".\logic\skill\PeriodEffect_def.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="attr"
+				>
+				<File
+					RelativePath=".\logic\attr\EntityFunc.h"
+					>
+				</File>
+				<File
+					RelativePath=".\logic\attr\ModifierFunc.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\logic\attr\ModifierFunc.h"
+					>
+				</File>
+			</Filter>
+		</Filter>
 	</Files>
 	<Globals>
 	</Globals>
