--- a/SpellEditor.vcproj
+++ b/SpellEditor.vcproj
@@ -175,6 +175,14 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\CCustomGridCellCtrl.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\CCustomGridCellCtrl.h"
+				>
+			</File>
+			<File
 				RelativePath=".\CListView.cpp"
 				>
 			</File>
